--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,13 +8,14 @@ body {
 }
 
 .container {
+    display: inline-block;
+    width: 100%;
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border: 2px solid #ccc;
     text-align: center;
-    width: 100%;
     max-width: 500px;
     box-sizing: border-box;
 }
@@ -82,4 +83,48 @@ a:hover {
 
 p {
     color: red;
+}
+
+.table-container {
+    display: inline-block;
+    padding: 20px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 100%;
+    box-sizing: border-box;
+}
+
+table {
+    border-collapse: collapse;
+    margin-bottom: 20px;
+    width: 100%;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+    word-wrap: break-word;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+.back-button {
+    display: inline-block;
+    margin-bottom: 10px;
+    padding: 10px 20px;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #000;
+    font-weight: bold;
+}
+
+.back-button:hover {
+    background-color: #e0e0e0;
 }
